@@ -1,3 +1,12 @@
+Sun Aug 23 10:36:28 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	Remove the old set-id wrapper, which hasn't been recommended for
+	several years now.
+
+	* src/wrapper.c: Remove.
+	* src/Makefile.am (noinst_PROGRAMS, wrapper_LDADD, wrapper_SOURCES):
+	  Remove.
+
 Sun Aug 23 10:26:32 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* README: Various minor updates.
